<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/task_finished" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        tools:text="@string/result_caption" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginVertical="40dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/btn_run_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption_run_service" />

    <TextView
        android:id="@+id/service_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp" />

    <Button
        android:id="@+id/btn_stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption_stop_service" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginVertical="40dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/btn_run_single_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption_run_single_task" />

</LinearLayout>